# color-flipper

./: color-flipper-web-46205ec3ce59754b.js  color-flipper-web-46205ec3ce59754b_bg.wasm  index.html  main-dc2d10da8ad0805d.css
.github/workflows/: publish_gh_pages.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/aisaiahharvey/colorflipper/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml  fragment_first.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
lib/: Cargo.toml
lib/src/: android.rs
macOS/ColorFlipper/: ColorFlipperApp.swift  ContentView.swift
macOS/ColorFlipper.xcodeproj/: project.pbxproj
macOS/ColorFlipper.xcodeproj/project.xcworkspace/xcuserdata/allisterharvey.xcuserdatad/: UserInterfaceState.xcuserstate
macOS/ColorFlipper.xcodeproj/xcshareddata/xcschemes/: ColorFlipper.xcscheme
macOS/ColorFlipper.xcodeproj/xcuserdata/allisterharvey.xcuserdatad/xcschemes/: xcschememanagement.plist
macOS/ColorFlipperTests/: ColorFlipperTests.swift
macOS/ColorFlipperUITests/: ColorFlipperUITests.swift  ColorFlipperUITestsLaunchTests.swift
scripts/: pre-build-android.sh  pre-build-macOS.sh
web/: Cargo.toml  README.md  Trunk.toml  index.html
web/src/: main.rs
(+4 files in other folders)
